# expt-o

./: README.md
src_2d/: CMakeCache.txt  InstallationLog.txt  Makefile  cmake_install.cmake  components.xml  expto.db  maintenancetool.ini  moc_MainWindow.cpp_parameters  ui_MainWindow.h
src_2d/data/: Planilha meninas 24-06.xlsx  planilha_2017-06-20_18-05-54.xlsx  planilha_2017-06-21_17-22-08.xlsx  planilha_2017-06-22_16-55-42.xlsx  planilha_2017-06-23_16-55-14 - alterada.xlsx  planilha_2017-06-24_17-11-35.xlsx  planilha_2017-06-25_16-05-02 Ammir.xlsx  planilha_2017-06-25_16-47-31 Ladys.xlsx  planilha_2017-06-26_16-03-17  Ladys.xlsx  planilha_2017-06-26_16-03-17 Ammir.xlsx  planilha_2017-06-27_16-41-55 Ammir.xlsx  planilha_2017-06-27_16-41-55 Ladys.xlsx  planilha_2017-06-28_15-33-29 Ammir.xlsx  planilha_2017-06-28_15-33-29 Ladys.xlsx  planilha_2017-06-29_15-42-11 Ammir.xlsx  planilha_2017-06-29_15-42-11 Ladys.xlsx  planilha_2017-06-30_16-10-47 Ammir.xlsx  planilha_2017-06-30_16-10-47 Ladys.xlsx  planilha_2017-07-01_17-59-59 Ammir Probe 1.xlsx  planilha_2017-07-01_17-59-59 Ladys.xlsx  planilha_2017-07-02_16-24-01 Ammir Probe 2.xlsx  planilha_2017-07-02_16-24-01 Ladys.xlsx  planilha_2017-07-03_15-12-33 Ladys.xlsx
src_3d/: CMakeCache.txt  ExptoXYZRGBA.cbp  Makefile  cmake_install.cmake  moc_MainWindow.cpp_parameters  ui_CaptureWidget.h  ui_ClusteringOptionWidget.h  ui_ClusteringWidget.h  ui_FileWidget.h  ui_FilterOptionWidget.h  ui_MainWindow.h  ui_MinCutOptionWidget.h  ui_SegmentationOptionWidget.h  ui_TrackingWidget.h
src_3d/ExptoXYZRGBA_autogen/: mocs_compilation.cpp
src_3d/ExptoXYZRGBA_autogen/EWIEGA46WW/: moc_MainWindow.cpp
src_3d/ExptoXYZRGBA_autogen/UZBZ344ZLF/: moc_CaptureWidget.cpp  moc_ClusteringOptionWidget.cpp  moc_ClusteringWidget.cpp  moc_FileWidget.cpp  moc_FilterOptionWidget.cpp  moc_MinCutOptionWidget.cpp  moc_SegmentationOptionWidget.cpp  moc_TrackingWidget.cpp
src_3d/ExptoXYZRGBA_autogen/XDT2JC7ZRV/: moc_KinectSensor.cpp
src_3d/widget/: moc_CaptureWidget.cpp_parameters  moc_ClusteringOptionWidget.cpp_parameters  moc_ClusteringWidget.cpp_parameters  moc_FileWidget.cpp_parameters  moc_FilterOptionWidget.cpp_parameters  moc_MinCutOptionWidget.cpp_parameters  moc_SegmentationOptionWidget.cpp_parameters  moc_TrackingWidget.cpp_parameters  moc_VideoWidget.cpp_parameters
src_bkp/2019/: CMakeLists.txt  MainWindow.ui
src_bkp/Basico/: main.cpp
src_bkp/Bioterio/src/: CMakeLists.txt
src_bkp/Bioterio/src - Antes do CMake/: CMakeLists.txt
src_inpi/: MainWindow.cpp  MainWindow.h
src_inpi/kinect/: KinectCloud.hpp  KinectSensor - FULL 2minutos.hpp  KinectSensor - LendoArquivoSemHeader.hpp
src_inpi/track/: EuclideanCluster.hpp  RemoveNaNs.hpp
src_inpi/util/: Logger.cpp
src_inpi/widget/: CaptureWidget.h  ClusteringOptionWidget.cpp  ClusteringOptionWidget.ui  ClusteringWidget.cpp  MinCutOptionWidget.ui  TrackingWidget - Copia.h  TrackingWidget - Copia.ui  TrackingWidget.cpp  TrackingWidget.h  VideoQVTKOpenGLWidget.cpp
src_outros/src_2019/: CapturaMorris.pro.user.032c858
src_outros/src_basico/: CMakeLists.txt
src_outros/src_bioterio/src - Antes do CMake/: ExptoBioterio.pro
src_outros/src_inpi/: CMakeLists.txt  MainWindow.ui  main.cpp
src_outros/src_inpi/kinect/: KinectSensor - Cropping by Radius.hpp  KinectSensor -Read Full File.hpp  KinectSensor -Reading and writing.hpp  KinectSensor.hpp  KinectTypes.hpp
src_outros/src_inpi/temp/: CMakeLists.txt.user.160e62f
src_outros/src_inpi/track/: Centroid.hpp  ColorRegion.hpp  Covariance.hpp  PassthroughFilter.hpp  RadiusOutlier.hpp  Reconstruction.hpp
src_outros/src_inpi/util/: MMF.cpp  MMF.hpp
src_outros/src_inpi/widget/: CaptureWidget.cpp  ClusteringOptionWidget.h  ClusteringWidget.h  ClusteringWidget.ui  FileWidget.cpp  FileWidget.h  FileWidget.ui  FilterOptionWidget.cpp  FilterOptionWidget.h  FilterOptionWidget.ui  SegmentationOptionWidget.cpp  SegmentationOptionWidget.h  SegmentationOptionWidget.ui  TrackingWidget - Copia.cpp  TrackingWidget.ui  VideoQVTKOpenGLWidget.h
src_outros/src_xyz/: CMakeLists.txt  MainWindow.h
src_outros/src_xyz/util/: Defines.h
src_outros/src_xyz/widget/: MinCutOptionWidget.cpp  MinCutOptionWidget.h
src_xyz/: CMakeLists.txt.user.9dca90d  MainWindow.ui  main.cpp
src_xyz/kinect/: KinectSensor.hpp
src_xyz/track/: Compression.hpp  Euclidean.hpp  PassthroughFilter.hpp  RANSAC.hpp  Resampling.hpp
src_xyz/widget/: CaptureWidget.ui  VideoQVTKOpenGLWidget.cpp
